# poetry_demo_math_package

./: pyproject.toml
pdmp/: core.py
tests/: test_pdmp.py
