[tool.poetry]
name = "pdmp"
version = "0.2.0"
description = ""
authors = ["Sebastian Niespodziany <sebastianniespodziany@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
